--- a/src/app/components/CardContainer.module.css
+++ b/src/app/components/CardContainer.module.css
@@ -2,6 +2,7 @@
     display: flex;
     overflow: hidden;
     min-height: 100vh;
+    touch-action: none;
 }
 
 .column {
